--- a/index.html
+++ b/index.html
@@ -286,11 +286,11 @@
             <div class="attend_box">
               <p class="attend_note">
                 <span class="lang-ja-only">
-                  勝手ながら １２月３１日（水）までに<br>
+                  勝手ながら １月１６日（金）までに<br>
                   ご出欠のお返事をいただけますと幸いです
                 </span>
                 <span class="lang-en-only">
-                  We'd appreciate it if you could kindly reply<br>by December 31
+                  We'd appreciate it if you could kindly reply<br>by January 16
                 </span>
               </p>
 
